Add a memory-mapped backend (not working as of now)